STABLE - correct algo recourse name
corrected spelling mistakes for code file names

--- a/algorithmic_recourse.html
+++ b/algorithmic_recourse.html
@@ -19,7 +19,7 @@
     <nav class="controls">
       <a href="index.html" class="nav-btn">Attribution Score</a>
       <a href="simulation.html" class="nav-btn">Simulation through Intervention</a>
-      <a href="algorithmic_recouse.html" class="nav-btn">Algorithmic Recourse</a>
+      <a href="algorithmic_recourse.html" class="nav-btn">Algorithmic Recourse</a>
     </nav>
     
   </header>
