--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="controls">
       <a href="index.html" class="nav-btn">Attribution Score</a>
       <a href="simulation.html" class="nav-btn">Simulation through Intervention</a>
-      <a href="algorithmic_recouse.html" class="nav-btn">Algorithmic Recourse</a>
+      <a href="algorithmic_recourse.html" class="nav-btn">Algorithmic Recourse</a>
     </nav>
     
       <label for="map-mode" style="margin-left:1rem; font-weight:500; display:flex; align-items:center;">
