--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Disaster Bench</title>
 
-  <!-- your CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css"/>
 
   <!-- D3 & TopoJSON -->
   <script src="https://d3js.org/d3.v7.min.js" defer></script>
   <script src="https://d3js.org/topojson.v3.min.js" defer></script>
 
-  <!-- your JS -->
-  <script src="main.js" defer></script>
-  <script src="nav_control.js" defer></script>
+  <!-- JS -->
+  <script type="module" src="js/app.js" defer></script>
 </head>
 
 
