--- a/simulation.html
+++ b/simulation.html
@@ -41,7 +41,7 @@
     <!-- Left: US county choropleth;  stolen from index.html -->
     <div class="left-panel">
       <svg id="map" class="chart" role="img"></svg>
-      <p id="county_selected_text">County selected: </p>
+      <p id="county_selected_text"></p>
     </div>
 
     <!-- Right: DAG, feature mixer -->
