STABLE - Map ui element improvement
added zoom function, better county name label

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     <!-- Left: US county choropleth -->
     <div class="left-panel">
       <svg id="map" class="chart" role="img"></svg>
+      <div class="zoom-controls">
+        <p id="zoom-label">Zoom</p>
+        <button id="zoom_in">+</button>
+        <button id="zoom_out">-</button>
+      </div>
       <p id="county_selected_text"></p>
     </div>
     <!-- Right: features bar + Dynamic World panel -->
