STABLE - improve nav for html
now only need update nav.html to have all pages shown or not

--- a/index.html
+++ b/index.html
@@ -16,18 +16,14 @@
 
   <!-- JS -->
   <script type="module" src="js/app.js" defer></script>
+  <script src="nav_control.js" defer></script>
+
 </head>
 
 
 <body>
   <header>
-    <!-- <h1>Disaster Bench</h1> -->
-    <h1></h1>
-    <nav class="controls">
-      <a href="index.html" class="nav-btn">Attribution Score</a>
-      <a href="simulation.html" class="nav-btn">Simulation through Intervention</a>
-      <a href="algorithmic_recourse.html" class="nav-btn">Algorithmic Recourse</a>
-    </nav>
+    <!-- Auto loads nav buttons here now -->
     
       <label for="map-mode" style="margin-left:1rem; font-weight:500; display:flex; align-items:center;">
   Choropleth:
