--- a/algorithmic_recourse.html
+++ b/algorithmic_recourse.html
@@ -16,6 +16,8 @@
   
   <!-- JS -->
   <script type="module" src="js/app.js" defer></script>
+  <script src="nav_control.js" defer></script>
+
 </head>
 <body>
 
@@ -23,12 +25,7 @@
   HEADER: Contains the main title and navigation links.
   ================================================================== -->
   <header>
-    <h1></h1>
-    <nav class="controls">
-      <a href="index.html" class="nav-btn">Attribution Score</a>
-      <a href="simulation.html" class="nav-btn">Simulation through Intervention</a>
-      <a href="algorithmic_recourse.html" class="nav-btn">Algorithmic Recourse</a>
-    </nav>
+    
   </header>
 
   <!-- =================================================================
