--- a/simulation.html
+++ b/simulation.html
@@ -19,6 +19,8 @@
 
   <!-- JS -->
   <script type="module" src="js/app.js" defer></script>
+  <script src="nav_control.js" defer></script>
+
 </head>
 
 
@@ -27,13 +29,6 @@
   <!-- <header> start -->
   <header>
     <!-- <h1>Disaster Bench</h1> -->
-    <h1></h1>
-    <nav class="controls">
-      <a href="index.html" class="nav-btn">Attribution Score</a>
-      <a href="simulation.html" class="nav-btn">Simulation through Intervention</a>
-      <a href="algorithmic_recourse.html" class="nav-btn">Algorithmic Recourse</a>
-    </nav>
-    
   </header>
   
   <!-- <main> start -->
