--- a/algorithmic_recourse.html
+++ b/algorithmic_recourse.html
@@ -38,8 +38,16 @@
     
     <!-- Left Panel: Contains the interactive US county map -->
     <div class="left-panel">
-      <svg id="map" class="chart" role="img"></svg>
-      <p id="county_selected_text"></p>
+      <svg id="map" class="chart" role="img"></svg>\
+      <div class="zoom-controls">
+        <p id="zoom-label">Zoom</p>
+        <button id="zoom_in">+</button>
+        <button id="zoom_out">-</button>
+      </div>
+      <div id="county-selected-text-container">
+        <p id="county_selected_text"></p>
+
+      </div>
     </div>
 
     <!-- Right Panel: Contains the 2x2 recourse controls and chart -->
