--- a/simulation.html
+++ b/simulation.html
@@ -41,7 +41,15 @@
     <!-- Left: US county choropleth;  stolen from index.html -->
     <div class="left-panel">
       <svg id="map" class="chart" role="img"></svg>
-      <p id="county_selected_text"></p>
+      <div class="zoom-controls">
+        <p id="zoom-label">Zoom</p>
+        <button id="zoom_in">+</button>
+        <button id="zoom_out">-</button>
+      </div>
+      <div id="county-selected-text-container">
+        <p id="county_selected_text"></p>
+
+      </div>
     </div>
 
     <!-- Right: DAG, feature mixer -->
