small stuff as in updateLegend(), dk whats that

--- a/incinerate.html
+++ b/incinerate.html
@@ -53,6 +53,13 @@
           <button id="focus_on_state">Focus on state</button>
           <button id="reset_focus">Reset focus from state</button>
           <!-- in the future we can sub "state" for the actual state name -->
+          <div id="layer-dropdown" class="dropdown">
+            <button id="layer-toggle-btn" class="dropdown-btn">Layers ▾</button>
+            <div id="layer-menu" class="dropdown-content">
+              <label><input type="checkbox" id="toggle-forest" checked> Forest Layer</label><br>
+              <!-- Add more layers later -->
+            </div>
+          </div>
         </div>
       </div>
     </div>
