STABLE - UI improvement
removed older CIKMdemo pages links, enhanced GUI to look like prev DT, toolbar here, no drawer yet

--- a/incinerate.html
+++ b/incinerate.html
@@ -27,9 +27,10 @@
   <!-- =================================================================
   HEADER: Provides consistent navigation across all pages.
   ================================================================== -->
-  <header>
-    <!-- Auto loads nav buttons here now -->
-    
+  <header class="toolbar">
+    <button class="menu-button" id="menu-toggle">☰</button>
+    <!-- This is for a side drawer, not sure if we need it yet. -->
+    <span class="toolbar-title">Digital Twin</span>
   </header>
 
   <!-- =================================================================
