--- a/nav.html
+++ b/nav.html
@@ -2,8 +2,8 @@
 <!-- solely for navigation markup -->
 <!-- when a new page is added, please append to this list -->
 <nav class="controls">
-  <a href="index.html" class="nav-btn">Attribution Score</a>
+  <!-- <a href="index.html" class="nav-btn">Attribution Score</a>
   <a href="simulation.html" class="nav-btn">Simulation through Intervention</a>
-  <a href="algorithmic_recourse.html" class="nav-btn">Algorithmic Recourse</a>
-  <a href="incinerate.html" class="nav-btn">Wildfire Simulation (temp)</a>
+  <a href="algorithmic_recourse.html" class="nav-btn">Algorithmic Recourse</a> -->
+  <a href="incinerate.html" class="nav-btn">Wildfire Simulation</a>
 </nav>
