STABLE - getting ready for rework

--- a/incinerate.html
+++ b/incinerate.html
@@ -6,7 +6,7 @@
   ================================================================== -->
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>New Map Page</title>
+  <title>Incinerate - Wildfire Sim Page</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
   HEADER: Provides consistent navigation across all pages.
   ================================================================== -->
   <header class="toolbar">
-    <button class="menu-button" id="menu-toggle">☰</button>
+    <!-- <button class="menu-button" id="menu-toggle">☰</button> -->
     <!-- This is for a side drawer, not sure if we need it yet. -->
     <span class="toolbar-title">Digital Twin</span>
   </header>
