--- a/template.html
+++ b/template.html
@@ -26,9 +26,10 @@ template.html: this is just a template that includes the map, nav, content neede
   <!-- =================================================================
   HEADER: Provides consistent navigation across all pages.
   ================================================================== -->
-  <header>
-    <!-- Auto loads nav buttons here now -->
-    
+  <header class="toolbar">
+    <!-- <button class="menu-button" id="menu-toggle">☰</button> -->
+    <!-- This is for a side drawer, not sure if we need it yet. -->
+    <span class="toolbar-title">Digital Twin</span>
   </header>
 
   <!-- =================================================================
