--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Wildfire Simulation</title>
+    <title>Digital Twin Map</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -13,33 +13,43 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
-    <!-- Optional GeoTIFF plugin -->
-    <script src="https://unpkg.com/georaster"></script>
-    <script src="https://unpkg.com/georaster-layer-for-leaflet@3.9.0/georaster-layer-for-leaflet.min.js"></script>
-
     <!-- Styles -->
     <link rel="stylesheet" href="./base.css" />
     <link rel="stylesheet" href="./index.css" />
 </head>
 
 <body>
-    <!-- Header -->
     <header class="toolbar">
         <span class="toolbar-title">Digital Twin</span>
     </header>
 
-    <!-- Page content -->
-    <main class="content">
-        <section class="map-container">
-            <h2 class="section-title">Wildfire Simulation Map</h2>
-            <div id="map"></div>
-        </section>
+    <main id="main">
+        <div class="left-panel">
+            <section class="map-container">
+                <!-- <h2 class="section-title">Interactive Map</h2> -->
+                <div id="map"></div>
+            </section>
+        </div>
+
+        <div class="right-panel">
+            <div class="layer-panel">
+                <!-- to be changed -->
+                <h3>Map Layers</h3>
+
+                <div class="dropdown">
+                    <button class="dropdown-btn">Base Layers ▾</button>
+                    <div class="dropdown-content">
+                        <!-- <label><input type="checkbox" id="toggle-roads" checked> Roads</label><br> -->
+                        <label><input type="checkbox" id="toggle-counties" checked> County Borders</label><br>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </main>
 
-    <!-- Tooltip (optional) -->
     <div id="tip" class="tooltip"></div>
 
-    <!-- App Entry Point -->
     <script type="module" src="./js/app.js"></script>
 </body>
 
