STABLE - README, forestCover present as default, UX improvement

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <button class="dropdown-btn">Base Layers ▾</button>
                     <div class="dropdown-content">
                         <label><input type="checkbox" id="toggle-counties" checked> County Borders</label><br>
-                        <label><input type="checkbox" id="toggle-forest"> Forest Layer (GEE)</label><br>
+                        <label><input type="checkbox" id="toggle-forest" checked> Forest Layer (GEE)</label><br>
                     </div>
                 </div>
 
