UNSTABLE - migrate to vite, fix import, not fully tested

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
     <!-- Leaflet -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <!-- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script> -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+    <!-- GeoRaster libraries -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/georaster@1.6.0/dist/georaster.browser.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/georaster-layer-for-leaflet@2.0.1/dist/georaster-layer-for-leaflet.min.js"></script> -->
+    <!-- changed to using vite and import modules -->
 
     <!-- Styles -->
     <link rel="stylesheet" href="./base.css" />
