UNSTABLE - land cover addition, ok, geotiff addition, timeout from back

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
     <!-- Leaflet -->
-    <!-- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script> -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
     <!-- GeoRaster libraries -->
@@ -54,7 +54,7 @@
                     <button class="dropdown-btn">Base Layers ▾</button>
                     <div class="dropdown-content">
                         <label><input type="checkbox" id="toggle-counties" checked> County Borders</label><br>
-                        <label><input type="checkbox" id="toggle-forest" checked> Forest Layer (GEE)</label><br>
+                        <label><input type="checkbox" id="toggle-land-cover" checked> Land Cover Layer (GEE DW-V1)</label><br>
                     </div>
                 </div>
 
