STABLE - frontend part, get accurate dynamic forest GeoJSON

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <div class="map-controls">
                     <button id="focus-on-county">Focus on County</button>
                     <button id="reset-focus">Reset Focus</button>
+                    <button id="start-wildfire-sim">Start Wildfire Simulation</button>
                 </div>
 
                 <div class="dropdown">
