STABLE - added last panes to checkbox, added remove ignition point button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                     <button id="focus-on-county">Focus on County</button>
                     <button id="reset-focus">Reset Focus</button>
                     <button id="set-ignition-point" class="action-button">Set Ignition Point</button>
+                    <button id="remove-ignition-point" class="action-button">Remove Ignition Point</button>
+
                     <button id="start-wildfire-sim" class="action-button">Start Wildfire Simulation</button>
                 </div>
 
@@ -52,6 +54,7 @@
                     <div class="dropdown-content">
                         <label><input type="checkbox" id="toggle-counties" checked> County Borders</label><br>
                         <label><input type="checkbox" id="toggle-forest" checked> Forest Layer (GEE)</label><br>
+                        <label><input type="checkbox" id="toggle-wildfire" checked> Wildfire Simulation</label><br>
                     </div>
                 </div>
 
