--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <button class="dropdown-btn">Base Layers ▾</button>
                     <div class="dropdown-content">
                         <label><input type="checkbox" id="toggle-counties" checked> County Borders</label><br>
-                        <label><input type="checkbox" id="toggle-forest" checked> Forest Layer (GEE)</label><br>
+                        <label><input type="checkbox" id="toggle-dynamic-world" checked> Dynamic World</label><br>
                         <label><input type="checkbox" id="toggle-wildfire" checked> Wildfire Simulation</label><br>
                     </div>
                 </div>
